tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_51.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := (1223 # (+ (0 DIV z)));
               x := (200 * 1);
  (* error *)  q := (2 <= y);
               p := ((((200 DIV 2) * 200) DIV 0) >= 1);
               p := (1223 < (+ ((y * 1223) + 0)));
               r := (~ (~ ((+ 0) > 0)));
               y := (+ 1223);
               p := ((z MOD 1223) = ((x DIV (1223 DIV 1223)) MOD x));
               x := (- (- x));
               y := (200 + ((200 DIV (- 2)) MOD 200))
END Test13.